--- a/project.json
+++ b/project.json
@@ -1,5 +1,6 @@
 {
   "name": "ExtraccionDxSECOP_PAA",
+  "projectId": "93c46363-e0be-45f1-a638-09e92bece6be",
   "description": "Proyecto bot para extracción de datos PAA desde el portal SECOP y carga a base de datos",
   "main": "Main.xaml",
   "dependencies": {
@@ -19,16 +20,21 @@
   "projectVersion": "1.0.6",
   "runtimeOptions": {
     "autoDispose": false,
+    "netFrameworkLazyLoading": false,
     "isPausable": true,
+    "isAttended": false,
     "requiresUserInteraction": true,
     "supportsPersistence": false,
+    "workflowSerialization": "DataContract",
     "excludedLoggedData": [
       "Private:*",
       "*password*"
     ],
     "executionType": "Workflow",
     "readyForPiP": false,
-    "startsInPiP": false
+    "startsInPiP": false,
+    "mustRestoreAllDependencies": false,
+    "pipType": "ChildSession"
   },
   "designOptions": {
     "projectProfile": "Developement",
