--- a/project.json
+++ b/project.json
@@ -8,16 +8,16 @@
     "MySql.Data": "8.0.21",
     "UiPath.Credentials.Activities": "[1.1.6479.13204]",
     "UiPath.Database.Activities": "1.3.7369.25200",
-    "UiPath.Excel.Activities": "[2.5.4]",
+    "UiPath.Excel.Activities": "[2.22.3]",
     "UiPath.Mail.Activities": "[1.4.1]",
-    "UiPath.System.Activities": "[19.4.1]",
+    "UiPath.System.Activities": "[23.10.3]",
     "UiPath.UIAutomation.Activities": "[19.4.2]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "20.4.3.0",
-  "projectVersion": "1.0.6",
+  "projectVersion": "1.0.9",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -47,7 +47,8 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": false
+    "modernBehavior": false,
+    "saveToCloud": false
   },
   "arguments": {
     "input": [
